# nidhogg_lite

./: note.md
PoC/src/: dec_chrome.rs  dec_ff.rs  persis.rs
PoC/src/exfil/keys/: mod.rs
PoC/src/privesc/: mod.rs
PoC/src/remacc/: mod.rs
nidhogg_lite/: README.md  todo.md
nidhogg_lite/PoC/: Cargo.toml
nidhogg_lite/PoC/src/: keys.rs  main.rs  privesc.rs  remacc.rs
nidhogg_lite/PoC/src/exfil/: mod.rs
nidhogg_lite/PoC/src/exfil/dec_chrome/: mod.rs
nidhogg_lite/PoC/src/exfil/dec_ff/: mod.rs
nidhogg_lite/PoC/src/persis/: mod.rs
nidhogg_lite/PoC/src/persis/dll_inj/: mod.rs
nidhogg_lite/PoC/src/persis/reg/: mod.rs
nidhogg_lite/PoC/src/privesc/aie/: mod.rs
nidhogg_lite/PoC/src/privesc/npi/: mod.rs
nidhogg_lite/PoC/src/privesc/wsp/: mod.rs
nidhogg_lite/tmp/: priv_aie.txt  tmp.txt  tmp2.txt
nidhogg_lite/wiki_clone/go/: Persistence_Registry.md  Remote_Access.md  Weak_Service_Paths.md
nidhogg_lite/wiki_clone/rust/: AV_Checks.md  Keylogging.md
tmp/: persis_reg.txt  tmp_powerup.txt
wiki_clone/go/: Always_Install_Elevated.md
wiki_clone/rust/: Browser_Passes.md
